--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title>WEB DEV Final Project</title>
-</head>
-<body>
 
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <title>WEB DEV Final Project</title>
+        <link type="stylesheet" href="styles/main.css">
+    </head>
+
+    <body>        
+        <h1>Final project for web development class</h1>
+
+        <p>
+            Hello and welcome to our Project.
+        <p>
+
+    </body>
+
 </html>
